changed folder name

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ install:
   - pip install flake8 codecov pytest pytest-cov
 
 script:
-  - python -m flake8 src/
-  - python -m pytest -vvv src/ --cov src
+  - python -m flake8 my_src/
+  - python -m pytest -vvv my_src/ --cov my_src
 
 after_success:
   - codecov e1abb037-178f-47e1-98a2-da4fb8c699ce
