--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 cache: pip
 
 install:
-  - pip install flake8 codecov pytest pytest-cov pyaudio
+  - pip install flake8 codecov pytest pytest-cov
   - pip install -r requirements.txt
 
 script:
