windows didn't work either so use linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: python
 dist: xenial
 cache: pip
 os:
-  - windows
+  - linux
 
 install:
   - pip install flake8 codecov pytest pytest-cov 
-  - python -m pip install pyaudio
+  - pip install pyaudio
 
 script:
   - python -m flake8 my_src/
