--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ os:
 
 install:
   - pip install flake8 codecov pytest pytest-cov 
-  - pip install pyaudio
+  - sudo apt-get install python-pyaudio python3-pyaudio
 
 script:
   - python -m flake8 my_src/
