--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ os:
 install:
   - pip install flake8 codecov pytest pytest-cov 
   - sudo apt-get install python-pyaudio python3-pyaudio
+  - pip install pyaudio
 
 script:
   - python -m flake8 my_src/
