--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,25 @@ os:
   - linux
 
 install:
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION conda-forge dependencies
+  - conda activate test-environment
+  - python setup.py install
   - pip install flake8 codecov pytest pytest-cov 
-  - sudo apt-get install python-pyaudio python3-pyaudio
-  - pip install pyaudio
+  - conda install -c conda-forge python-sounddevice
 
 script:
   - python -m flake8 my_src/
