--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ os:
   - linux
 
 install:
-  - pip install flake8 codecov pytest pytest-cov
+  - pip install flake8 codecov pytest pytest-cov torch
+  - pip install -r requirements.txt
 
 
 script:
