--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work
+autopep8==2.6.0
+flake8==3.8.4
 mock==4.0.2
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-numpy @ file:///opt/concourse/worker/volumes/live/5572694e-967a-4c0c-52cf-b53d43e72de9/volume/numpy_and_numpy_base_1603491881791/work
-pandas @ file:///opt/concourse/worker/volumes/live/f14cf8c4-c564-4eff-4b17-158e90dbf88a/volume/pandas_1602088128240/work
 pep8==1.7.1
 pytest==6.2.1
 pytest-datafiles==2.0
-scikit-learn @ file:///opt/concourse/worker/volumes/live/111833a2-339b-4578-413b-7337bb8fe64a/volume/scikit-learn_1598376920601/work
-scipy @ file:///opt/concourse/worker/volumes/live/851446f6-a052-41c4-4243-67bb78999b49/volume/scipy_1604596178167/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
 tensorflow==2.3.1
 tokenizers==0.8.0rc4
 torch==1.7.1
