trying to stop my build from terminating

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ os:
 install:
   - pip install flake8 codecov pytest pytest-cov
   - pip install -r requirements.txt
+  - travis_wait mvn install
 
 
 script:
