--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ cache: pip
 os:
   - linux
 
+before_deploy:
+  - pip install travis-wait-improved
+
+deploy:
+  - provider: script
+    script: travis-wait-improved --timeout 30m packer build packer.json
+    
 install:
   - pip install flake8 codecov pytest pytest-cov
   - pip install -r requirements.txt
