--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 script:
   - python -m flake8 my_src/
-  - python -m pytest -vvv my_src/tests/tests.py --cov my_src
+  - python -m pytest -vvv my_src/tests/tests.py --cov my_src/
 
 after_success:
   - codecov
